--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
                     <img src="logo_qiwi_rgb.png" class="img" />
                 </div>
                 <div class="over flex">
-                    <div class="over1 lol">
-                        <p> Оплатить и перевести </p>
+                       <div class="over1 lol">
+                        <a href="index2.html">
+                        <p> Iphone </p>
+                           </a>
                     </div>
                     <div class="over2 lol">
-                        <p> Заказать карту </p>
+                       <a href="index3.html">
+                        <p> Dexter </p>
+                        </a>
                     </div>
                     <div class="over3 lol">
-                        <p> Пополнить кошелек </p>
+                       <a href="index%20(Case%20Conflict).html">
+                        <p> Games </p>
+                        </a>
                     </div>
                     <div class="over4 lol">
                         <a href="https://www.youtube.com/?gl=RU&hl=ru">
-                             <p> Помощь </p>
+                             <p> Youtube </p>
                         </a>
                     </div>
                 </div>
